--- a/FlightTicketSalesSite/Views/Admin/AirplaneCreate.cshtml
+++ b/FlightTicketSalesSite/Views/Admin/AirplaneCreate.cshtml
@@ -1,8 +1,8 @@
-﻿@model BusEditModel
+﻿@model AirplaneEditModel
 
-<h1>Create Bus</h1>
+<h1>Create Airplane</h1>
 <hr />
-<form asp-controller="Admin" asp-action="BusCreate" method="post" enctype="multipart/form-data">
+<form asp-controller="Admin" asp-action="AirplaneCreate" method="post" enctype="multipart/form-data">
    
     <div class="row">
         <div class="col-md-8">            
@@ -20,7 +20,7 @@
 
             <div class="form-group row mb-2">
                 <div class="col-md-4 offset-3  ">
-                    <button class="form-control btn btn-sm btn-continue fw-bold" type="submit">Create New Bus</button>
+                    <button class="form-control btn btn-sm btn-continue fw-bold" type="submit">Create New Airplane</button>
                 </div>
 
             </div>
