--- a/FlightTicketSalesSite/Views/Admin/AirplaneEdit.cshtml
+++ b/FlightTicketSalesSite/Views/Admin/AirplaneEdit.cshtml
@@ -1,9 +1,9 @@
-﻿@model BusEditModel
+﻿@model AirplaneEditModel
 
-<h1>Edit Bus</h1>
+<h1>Edit Airplane</h1>
 <hr />
-<form asp-controller="Admin" asp-action="BusEdit" method="post" enctype="multipart/form-data">
-    <input type="hidden" name="BusId" value=@Model.BusId />
+<form asp-controller="Admin" asp-action="AirplaneEdit" method="post" enctype="multipart/form-data">
+    <input type="hidden" name="AirplaneId" value=@Model.AirplaneId />
     <div class="row">
         <div class="col-md-8">
            
