--- a/FlightTicketSalesSite/Views/Admin/Index.cshtml
+++ b/FlightTicketSalesSite/Views/Admin/Index.cshtml
@@ -4,7 +4,7 @@
 
     </div>
     <div class="col-6">
-        <a asp-controller="Admin" asp-action="BusList" class="btn btn-sm btn-secondary fw-bold">Admin Buses</a>
+        <a asp-controller="Admin" asp-action="AirplaneList" class="btn btn-sm btn-secondary fw-bold">Admin Airplanes</a>
 
     </div>
 </div>
