--- a/FlightTicketSalesSite/Views/Admin/TripCreate.cshtml
+++ b/FlightTicketSalesSite/Views/Admin/TripCreate.cshtml
@@ -59,13 +59,13 @@
             </div>
             <div class="form-group row mb-2">
                 <div class="col-md-3">
-                    <label asp-for="BusId"></label>
+                    <label asp-for="AirplaneId"></label>
                 </div>
                 <div class="col-md-4">
-                    <input class="form-control " type="text" asp-for="BusId" />
+                    <input class="form-control " type="text" asp-for="AirplaneId" />
 
                 </div>
-                <span asp-validation-for="BusId" class="text-danger"></span>
+                <span asp-validation-for="AirplaneId" class="text-danger"></span>
 
             </div>
             <div class="form-group row mb-2">
