--- a/FlightTicketSalesSite/Views/Shared/_Header.cshtml
+++ b/FlightTicketSalesSite/Views/Shared/_Header.cshtml
@@ -24,7 +24,7 @@
                             <a class="nav-link text-white" asp-area="" asp-controller="Admin" asp-action="CityList">Cities</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Admin" asp-action="AirplaneList">Buses</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Admin" asp-action="BusList">Buses</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Admin" asp-action="TicketList">Tickets</a>
