--- a/FlightTicketSalesSite/Views/_ViewImports.cshtml
+++ b/FlightTicketSalesSite/Views/_ViewImports.cshtml
@@ -1,3 +1,7 @@
 ﻿@using FlightTicketSalesSite
 @using FlightTicketSalesSite.Models
+@using FlightTicketSalesSite.Entity
+@using FlightTicketSalesSite.Identity
+@using Microsoft.AspNetCore.Identity
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
