update views files

--- a/FlightTicketSalesSite/Views/_ViewImports.cshtml
+++ b/FlightTicketSalesSite/Views/_ViewImports.cshtml
@@ -3,5 +3,6 @@
 @using FlightTicketSalesSite.Entity
 @using FlightTicketSalesSite.Identity
 @using Microsoft.AspNetCore.Identity
+@using Iyzipay
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
