--- a/FlightTicketSalesSite/Views/Account/Login.cshtml
+++ b/FlightTicketSalesSite/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@* @model LoginModel
+﻿@model LoginModel
 <h1>Login</h1>
 <hr />
 <form asp-controller="Account" asp-action="Login" method="post">
@@ -42,4 +42,4 @@
 
 @section Scripts{
 	@await Html.PartialAsync("_ValidationScriptsPartial")
-} *@
+}
