--- a/FlightTicketSalesSite/Views/Admin/TicketList.cshtml
+++ b/FlightTicketSalesSite/Views/Admin/TicketList.cshtml
@@ -12,7 +12,7 @@
                 <th scope="col">Id</th>
                 <th scope="col">TripId</th>
                 <th scope="col">Passenger Id</th>
-                <th scope="col">Bus Id</th>
+                <th scope="col">Airplane Id</th>
                 <th scope="col">Seat No</th>
                 <th scope="col">Actions</th>
             </tr>
@@ -25,7 +25,7 @@
                     <td>@ticket.TicketId</td>
                     <td>@ticket.TripId</td>
                     <td>@ticket.PassengerId</td>
-                    <td>@ticket.BusId</td>
+                    <td>@ticket.AirplaneId</td>
                     <td>@ticket.SeatNo</td>
                     <td>
                         
