--- a/FlightTicketSalesSite/Views/Home/Index.cshtml
+++ b/FlightTicketSalesSite/Views/Home/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@* @model TicketRouteModel
+﻿@model TicketRouteModel
 
 <form asp-controller="Home" asp-action="TripList">
 
     <div class="row justify-context-between align-items-center">
         <div class="col-sm-6">
-            <img src="/images/logom.png" />
+            <img src="/images/logo.jpeg" width="300" />
         </div>
         <div class="col-sm-6 ">
             <div class="card shadow " style="width: 30rem;">
@@ -55,4 +55,4 @@
 
 @section Scripts{
     @await Html.PartialAsync("_ValidationScriptsPartial")
-} *@
+}
