--- a/FlightTicketSalesSite/Views/Home/TicketReservation.cshtml
+++ b/FlightTicketSalesSite/Views/Home/TicketReservation.cshtml
@@ -1,4 +1,4 @@
-﻿@* @model TicketReservationModel *@
+﻿@model TicketReservationModel
 <form asp-controller="Home" asp-action="TicketReservation" method="post">
 
     <input name="AirplaneId" type="hidden" value=@Model.AirplaneId />
