--- a/FlightTicketSalesSite/Views/_ViewImports.cshtml
+++ b/FlightTicketSalesSite/Views/_ViewImports.cshtml
@@ -2,6 +2,7 @@
 @using FlightTicketSalesSite.Models
 @using FlightTicketSalesSite.Entity
 @using FlightTicketSalesSite.Identity
+@* @using FlightTicketSalesSite.Core *@
 @using Microsoft.AspNetCore.Identity
 @using Iyzipay
 
