--- a/FlightTicketSalesSite/Views/Shared/_Header.cshtml
+++ b/FlightTicketSalesSite/Views/Shared/_Header.cshtml
@@ -2,7 +2,7 @@
     <div class="container logo">
         <a class="navbar-brand logo text-white " asp-area="" asp-controller="Home" asp-action="Index">
 
-            <img src="/images/headerlogo.png" width="300" />
+            <img src="/images/logo1.png" width="100" />
 
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
