--- a/FlightTicketSalesSite/Views/Home/TripList.cshtml
+++ b/FlightTicketSalesSite/Views/Home/TripList.cshtml
@@ -60,7 +60,7 @@ else
                         <div class="col-md-3 ">
                             <a class="btn btn-sm btn-continue fw-bold" asp-controller="Home" asp-action="TicketReservation" asp-route-id=@trips.TripId class="btn btn-primary">Continue</a>
 
-                            @*<button class="btn btn-sm btn-continue fw-bold" type="submit"> Continue ></button>*@
+                            <button class="btn btn-sm btn-continue fw-bold" type="submit"> Continue ></button>
                         </div>
                     </div>
 
