--- a/FlightTicketSalesSite/Views/Home/Index.cshtml
+++ b/FlightTicketSalesSite/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
 
 <form asp-controller="Home" asp-action="TripList">
 
-    <div class="row justify-context-between align-items-center">
+    <div class="row justify-context-between align-items-center" style="margin-bottom:100px">
         <div class="col-sm-6">
             <img src="/images/logo.jpeg" width="300" />
         </div>
