--- a/FlightTicketSalesSite/Views/Shared/_Footer.cshtml
+++ b/FlightTicketSalesSite/Views/Shared/_Footer.cshtml
@@ -1,3 +1,3 @@
-﻿<div class="container">
+﻿<div class="container" style="margin-top:5px">
     &copy; 2022 - BusTicketReservation.WebUI - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
 </div>
