--- a/FlightTicketSalesSite/Views/Home/TicketDetails.cshtml
+++ b/FlightTicketSalesSite/Views/Home/TicketDetails.cshtml
@@ -12,7 +12,7 @@
 			<h3>Ticket</h3>
 		</div>
 		<div class="col-md-5 text-end pe-5">
-			<img src="/images/bu.png" height="50" />
+			<img src="/images/logo1.png" height="50" />
 		</div>
 	</div>
 </div>
