--- a/FlightTicketSalesSite/Views/_ViewImports.cshtml
+++ b/FlightTicketSalesSite/Views/_ViewImports.cshtml
@@ -5,5 +5,7 @@
 @* @using FlightTicketSalesSite.Core *@
 @using Microsoft.AspNetCore.Identity
 @using Iyzipay
+@using FlightTicketSalesSite.Services
+@inject LanguageService _localization;
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
