--- a/FlightTicketSalesSite/Views/Home/Index.cshtml
+++ b/FlightTicketSalesSite/Views/Home/Index.cshtml
@@ -8,6 +8,7 @@
         </div>
         <div class="col-sm-6 ">
             <div class="card shadow " style="width: 30rem;">
+                <h1>@_localization.Getkey("Welcome").Value</h1>
                 <div class="card-body opacity-75  " style="background-color:#FFFF">
                     <h5 class="card-title text-dark fw-bold text-center">Search Trip</h5>
                     <div class="row">
