--- a/FlightTicketSalesSite/Views/Shared/_Header.cshtml
+++ b/FlightTicketSalesSite/Views/Shared/_Header.cshtml
@@ -59,6 +59,33 @@
                     </li>
                 }
             </ul>
+            <li>
+                <div class="dropdown">
+                    <button type="button"
+                            class="btn btn-primary dropdown-toggle"
+                            data-bs-toggle="dropdown">
+                        Localization
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a asp-controller="Home"
+                               asp-action="ChangeLanguage"
+                               asp-route-culture="en-US"
+                               class="dropdown-item">
+                                <i class="flag-icon flag-icon-gb"></i> English
+                            </a>
+                        </li>
+                        <li>
+                            <a asp-controller="Home"
+                               asp-action="ChangeLanguage"
+                               asp-route-culture="tr-TR"
+                               class="dropdown-item">
+                                <i class="flag-icon flag-icon-gb"></i> Türkçe
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </li>
         </div>
     </div>
 </nav>
