--- a/FlightTicketSalesSite/Views/Account/Login.cshtml
+++ b/FlightTicketSalesSite/Views/Account/Login.cshtml
@@ -26,14 +26,14 @@
 			<div class="form-group row mb-2">
 				<div class="col-md-10 offset-2">
 					<input type="checkbox" asp-for="RememberMe" checked />
-					<label>Remember Me</label>
+					<label>@_localization.Getkey("Remember Me").Value</label>
 				</div>
 				<span asp-validation-for="Password" class="text-danger"></span>
 			</div>
 
 			<div class="form-group row mb-2">
 				<div class="col-md-10 offset-2">
-					<button class="btn btn-continue" style="width:211px" type="submit">Login</button>
+					<button class="btn btn-continue" style="width:211px" type="submit">@_localization.Getkey("Login").Value</button>
 				</div>
 			</div>
 		</div>
