--- a/FlightTicketSalesSite/Views/Account/Register.cshtml
+++ b/FlightTicketSalesSite/Views/Account/Register.cshtml
@@ -6,7 +6,7 @@
         <div class="col-md-12">
             <div class="form-group row mb-2">
                 <div class="col-md-2">
-                    <label asp-for="FirstName"></label>
+                    <label asp-for="FirstName">FirstName</label>
                 </div>
                 <div class="col-md-10">
                     <input type="text" asp-for="FirstName" />
