--- a/FlightTicketSalesSite/Views/Home/Index.cshtml
+++ b/FlightTicketSalesSite/Views/Home/Index.cshtml
@@ -4,16 +4,12 @@
 
     <div class="row justify-context-between align-items-center" style="margin-bottom:100px">
         <div class="col-sm-6">
-            <img src="/images/logo.jpeg" width="300" />
-        </div>
-        <div class="col-sm-6 ">
             <div class="card shadow " style="width: 30rem;">
-                <h1>@_localization.Getkey("Welcome").Value</h1>
                 <div class="card-body opacity-75  " style="background-color:#FFFF">
-                    <h5 class="card-title text-dark fw-bold text-center">Search Trip</h5>
+                    <h5 class="card-title text-dark fw-bold text-center">@_localization.Getkey("Search Trip").Value</h5>
                     <div class="row">
                         <select class="form-select " asp-for="FromWhereId">
-                            <option selected>From Where </option>
+                            <option selected>@_localization.Getkey("From Where").Value </option>
 
                             @foreach (var city in Model.Cities)
                             {
@@ -26,7 +22,7 @@
                     </div>
                     <div class="row">
                         <select class="form-select mt-2" asp-for="ToWhereId">
-                            <option selected>To Where </option>
+                            <option selected>@_localization.Getkey("To Where").Value </option>
 
                             @foreach (var city in Model.Cities)
                             {
@@ -46,10 +42,13 @@
 
                     </div>
 
-                    <button class="btn btn-sm btn-continue fw-bold container-fluid mt-2" style="background-color:#ffad00" type="submit"> Search</button>
+                    <button class="btn btn-sm btn-continue fw-bold container-fluid mt-2" style="background-color:#ffad00" type="submit"> @_localization.Getkey("Search").Value</button>
 
                 </div>
-            </div>
+            </div>     
+        </div>
+        <div class="col-sm-6 ">
+            <img src="/images/logo.jpeg" width="300" />
         </div>
     </div>
 </form>
