--- a/FlightTicketSalesSite/Views/Home/TripList.cshtml
+++ b/FlightTicketSalesSite/Views/Home/TripList.cshtml
@@ -3,13 +3,13 @@
 @if (Model.Count == 0)
 {
     <div class="card card-body bg-danger text-center">
-        <h3>No trips found on the date you selected</h3>
+        <h3>@_localization.Getkey("No found trips").Value</h3>
     </div>
 }
 else
 {
     <form asp-controller="Home" asp-action="TicketReservation" method="get">
-        <h3>Select Trip</h3>
+        <h3>@_localization.Getkey("Select Trip").Value</h3>
         @foreach (var trips in Model)
         {
             <input name="TripId" type="hidden" value=@trips.TripId />
@@ -19,19 +19,19 @@ else
                 <div class="card-body" style="background-color:#FFFFFF">
                     <div class="row justify-content-around fw-bold">
                         <div class="col-md-2">
-                            From Where
+                            @_localization.Getkey("From Where").Value
                         </div>
                         <div class="col-md-1">
                         </div>
                         <div class="col-md-2">
-                            To Where
+                            @_localization.Getkey("To Where").Value
                         </div>
                         <div class="col-md-2">
-
-                            Time
+                            @_localization.Getkey("Time").Value
+                            
                         </div>
                         <div class="col-md-2">
-                            Price
+                            @_localization.Getkey("Price").Value
                         </div>
                         <div class="col-md-3">
                         </div>
@@ -58,7 +58,7 @@ else
                             @trips.Price ₺
                         </div>
                         <div class="col-md-3 ">
-                            <a class="btn btn-sm btn-continue fw-bold" asp-controller="Home" asp-action="TicketReservation" asp-route-id=@trips.TripId class="btn btn-primary">Continue</a>
+                            <a class="btn btn-sm btn-continue fw-bold" asp-controller="Home" asp-action="TicketReservation" asp-route-id=@trips.TripId class="btn btn-primary">@_localization.Getkey("Continue").Value</a>
 
                             @*<button class="btn btn-sm btn-continue fw-bold" type="submit"> Continue ></button>*@
                         </div>
