--- a/FlightTicketSalesSite/Views/Home/TripList.cshtml
+++ b/FlightTicketSalesSite/Views/Home/TripList.cshtml
@@ -19,18 +19,21 @@ else
                 <div class="card-body" style="background-color:#FFFFFF">
                     <div class="row justify-content-around fw-bold">
                         <div class="col-md-2">
+                            <i class="fa-solid fa-plane-departure"></i>
                             @_localization.Getkey("From Where").Value
                         </div>
                         <div class="col-md-1">
                         </div>
                         <div class="col-md-2">
+                            <i class="fa-solid fa-plane-arrival"></i>
                             @_localization.Getkey("To Where").Value
                         </div>
                         <div class="col-md-2">
-                            @_localization.Getkey("Time").Value
-                            
+                            <i class="fa-regular fa-clock"></i>
+                            @_localization.Getkey("Time").Value 
                         </div>
                         <div class="col-md-2">
+                            <i class="fa-solid fa-money-bill"></i>
                             @_localization.Getkey("Price").Value
                         </div>
                         <div class="col-md-3">
@@ -42,7 +45,6 @@ else
                             @trips.FromWhere.CityName
                         </div>
                         <div class="col-md-1 ps-0">
-                            <i class="fa-solid fa-wifi"></i>
                             <i class="fa-solid fa-utensils"></i>
                             <i class="fa-solid fa-tv"></i>
 
