--- a/FlightTicketSalesSite/Views/Admin/AirplaneCreate.cshtml
+++ b/FlightTicketSalesSite/Views/Admin/AirplaneCreate.cshtml
@@ -8,7 +8,7 @@
         <div class="col-md-8">            
             <div class="form-group row mb-2">
                 <div class="col-md-3">
-                    <label asp-for="SeatCapacity"></label>
+                    <label asp-for="SeatCapacity">@_localization.Getkey("SeatCapacity").Value</label>
                 </div>
                 <div class="col-md-4">
                     <input class="form-control " type="text" asp-for="SeatCapacity" />
@@ -20,7 +20,7 @@
 
             <div class="form-group row mb-2">
                 <div class="col-md-4 offset-3  ">
-                    <button class="form-control btn btn-sm btn-continue fw-bold" type="submit">Create New Airplane</button>
+                    <button class="form-control btn btn-sm btn-continue fw-bold" type="submit">@_localization.Getkey("Create New Airplane").Value</button>
                 </div>
 
             </div>
