--- a/FlightTicketSalesSite/Views/Admin/AirplaneEdit.cshtml
+++ b/FlightTicketSalesSite/Views/Admin/AirplaneEdit.cshtml
@@ -10,7 +10,7 @@
        
             <div class="form-group row mb-2">
                 <div class="col-md-3">
-                    <label asp-for="SeatCapacity"></label>
+                    <label asp-for="SeatCapacity">@_localization.Getkey("SeatCapacity").Value</label>
                 </div>
                 <div class="col-md-4">
                     <input class="form-control " type="text" asp-for="SeatCapacity" />
@@ -22,7 +22,7 @@
 
             <div class="form-group row mb-2">
                 <div class="col-md-4 offset-3  ">
-                    <button class="form-control btn btn-sm btn-continue fw-bold" type="submit">Save Changes</button>
+                    <button class="form-control btn btn-sm btn-continue fw-bold" type="submit">@_localization.Getkey("Save Changes").Value</button>
                 </div>
 
             </div>
