--- a/FlightTicketSalesSite/Views/Home/Index.cshtml
+++ b/FlightTicketSalesSite/Views/Home/Index.cshtml
@@ -4,8 +4,8 @@
 
     <div class="row justify-context-between align-items-center" style="margin-bottom:100px">
         <div class="col-sm-6">
-            <div class="card shadow " style="width: 30rem;">
-                <div class="card-body opacity-75  " style="background-color:#FFFF">
+            <div class="card shadow " style="width: 30rem; border-radius:13px;padding:15px;">
+                <div class="card-body opacity-75  " style="background-color:#FFFF;border-radius:13px;">
                     <h5 class="card-title text-dark fw-bold text-center">@_localization.Getkey("Search Trip").Value</h5>
                     <div class="row">
                         <select class="form-select " asp-for="FromWhereId">
@@ -42,13 +42,13 @@
 
                     </div>
 
-                    <button class="btn btn-sm btn-continue fw-bold container-fluid mt-2" style="background-color:#ffad00" type="submit"> @_localization.Getkey("Search").Value</button>
+                    <button class="btn btn-sx btn-continue fw-bold container-fluid mt-2" style="background-color:#ffad00" type="submit"> @_localization.Getkey("Search").Value</button>
 
                 </div>
             </div>     
         </div>
         <div class="col-sm-6 ">
-            <img src="/images/logo.jpeg" width="300" />
+            <img src="/images/logo.jpeg" width="300" style="border-radius:10px" />
         </div>
     </div>
 </form>
