--- a/FlightTicketSalesSite/Views/Shared/_Layout.cshtml
+++ b/FlightTicketSalesSite/Views/Shared/_Layout.cshtml
@@ -5,10 +5,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - BusTicketReservation.WebUI</title>
+    <title>@ViewData["Title"] - FlightTicketSalesSite.WebUI</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/BusTicketReservation.WebUI.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/FlightTicketSalesSite.WebUI.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/seatSelect.css" asp-append-version="true" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
