--- a/FlightTicketSalesSite/Views/Home/TicketInfo.cshtml
+++ b/FlightTicketSalesSite/Views/Home/TicketInfo.cshtml
@@ -11,8 +11,8 @@
 		<div class="col-md-7 ">
 			<h3 class="text-white ps-2 pt-2">Ticket Information</h3>
 		</div>
-		<div class="col-md-5 text-end pe-5">
-			<img src="/images/bu.png" height="50" />
+		<div class="col-md-5 text-end pe-5 mt-1">
+			<img src="/images/logo1.png" height="50" />
 		</div>
 	</div>
 </div>
