--- a/FlightTicketSalesSite/Views/Shared/_Layout.cshtml
+++ b/FlightTicketSalesSite/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - FlightTicketSalesSite.WebUI</title>
+    <title>@ViewData["Title"] FlightTicketSalesSite</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/FlightTicketSalesSite.WebUI.styles.css" asp-append-version="true" />
@@ -41,7 +41,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted" style="margin-top:20px">
         @await Html.PartialAsync("_Footer")        
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
